# comerciales-docs

./: .gitignore  CAMBIOS_INFRAESTRUCTURA.md  CHANGELOG.md  CONTEXTO_PROYECTO.md  E2E_SETUP_SUMMARY.md  GITHUB_SETUP_COMPLETADO.md  GIT_COMANDOS.md  INDICE_DOCUMENTACION.md  INDICE_INFRAESTRUCTURA.md  INFRAESTRUCTURA_SETUP_PLAN.md  JONATHAN_INVITADO.md  Makefile  PROXIMOS_PASOS.md  README.md  RESUMEN_ENTREGA.md  diagrama-er.txt  docker-compose.prod.yml  nginx.conf  seed.sql  seed_products.sql  test_e2e_simple.py  validate_barcode_endpoint.sh
comerciales-backend/: .coverage  Dockerfile  RUN_E2E_TEST.md  alembic.ini  main.py  pyproject.toml  test_e2e.py  test_e2e_simple.py
comerciales-backend/.atl/: skill-registry.md
comerciales-backend/alembic/: env.py
comerciales-backend/alembic/versions/: 001_initial_schema.py
comerciales-backend/app/: main.py
comerciales-backend/app/api/: deps.py  deps_ws.py
comerciales-backend/app/core/: __init__.py  database.py  db.py  events.py  redis.py  security.py
comerciales-backend/app/models/: __init__.py  audit.py  base.py  core.py  models.py  transaction.py
comerciales-backend/app/schemas/: __init__.py  category.py  order.py  product.py  transaction.py
comerciales-backend/app/services/: category_service.py  order_service.py  product_service.py  transaction_service.py
comerciales-backend/app/websockets/: __init__.py  manager.py
comerciales-backend/tests/: conftest.py  test_main.py
comerciales-backend/tests/api/: test_auth.py  test_e2e_caja_flow.py  test_orders_api.py  test_products_api.py  test_transactions_api.py  (+3 more)
(+53 files in other folders)
