[project]
name = "comerciales-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt<5.0.0",
    "fastapi>=0.136.0",
    "greenlet>=3.4.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.8.1",
    "pytest-cov>=7.1.0",
    "redis[hiredis]>=5.0.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "fakeredis[aioredis]>=2.20.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
